<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundBlue"
    android:layout_height="match_parent"
    tools:context=".activities.DetailMovieActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_mv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/background_gradient_detail"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_mv_poster"
            android:layout_width="120dp"
            android:layout_height="170dp"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_mv_backdrop"
            android:translationY="-40dp"
            >
            <ImageView
                android:id="@+id/iv_mv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sample_poster"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_detail_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:text="202x"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/mainGray"
            app:layout_constraintStart_toEndOf="@id/cv_mv_poster"
            app:layout_constraintTop_toTopOf="@id/cv_mv_poster"/>
        <TextView
            android:id="@+id/tv_detail_bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:fontFamily="@font/lato_regular"
            android:layout_marginLeft="10dp"
            android:text="@string/bullet"
            android:textColor="@color/mainGray"
            app:layout_constraintStart_toEndOf="@id/tv_detail_year"
            app:layout_constraintTop_toTopOf="@id/tv_detail_year"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_year"/>
        <TextView
            android:id="@+id/tv_detail_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="xx min"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/mainGray"
            app:layout_constraintStart_toEndOf="@id/tv_detail_bullet"
            app:layout_constraintTop_toTopOf="@id/tv_detail_year"
             app:layout_constraintBottom_toBottomOf="@id/tv_detail_year"/>
        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_detail_year"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_year"
            android:text="Title"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="22dp"
            android:maxLines="2"
            android:ellipsize="end"/>
        <LinearLayout
            android:id="@+id/ll_rating_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title">

            <RatingBar
                android:id="@+id/rb_detail"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/mainBlue"
                android:secondaryProgressTint="@color/mainBlue"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:stepSize="0.01"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                tools:rating="3" />

            <TextView
                android:id="@+id/tv_detail_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_bold"
                android:paddingTop="2dp"
                android:textColor="@color/mainGray"
                android:textSize="12sp"
                tools:text="XX" />

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_mv_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:translationY="-20dp"
            android:paddingLeft="16dp"
            android:clipToPadding = "false"
            tools:listitem="@layout/item_genre_recycler"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_synopsis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/synopsisBlue"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_genre"
            >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="3dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_item_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/synopsis"
                android:layout_marginTop="5dp"
                android:textSize="13dp"
                android:textColor="@color/mainGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_header" />

            <TextView
                android:id="@+id/tv_detail_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/mainBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_synopsis" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_cast_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="26dp"
            app:layout_constraintTop_toBottomOf="@id/cv_synopsis"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:clipToPadding = "false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_header"
            tools:listitem="@layout/item_cast_recycler"
            />
        <TextView
            android:id="@+id/tv_similar_header"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:text="@string/similar"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="26dp"
            app:layout_constraintTop_toBottomOf="@id/rv_cast"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_similar_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:clipToPadding = "false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_similar_header"
            tools:listitem="@layout/item_movie_recycler"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="50dp"
            app:elevation="4dp"
            android:text="@string/watch_trailer"
            app:iconGravity="textStart"
            app:backgroundTint="@color/mainBlue"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_similar_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <View
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:background="@drawable/background_gradient_detail_end"
            app:layout_constraintTop_toBottomOf="@id/iv_mv_backdrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="2dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>